--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,9 +1,14 @@
 
 .container{
+    padding: 20px ;
     display: flex;
     color: orange;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 2px solid pink;
+    border-radius: 20px;
+    
+    
 }
 
 .user{
@@ -50,9 +55,9 @@
     text-decoration: none;
     margin-right: 40px;
     color: orange;
-    background-color: rgba(255, 239, 208, 0.403);
-    border: 2px solid orange;
-    border-radius: 5px;
+    // background-color: rgba(255, 239, 208, 0.403);
+    border-bottom: 2px solid orange;
+    // border-radius: 5px;
     
         
 
