--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -2,7 +2,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 5px 40px 5px 40px;
+    padding: 5px 60px 5px 60px;
     font-weight: bold;
     line-height: 1.87;
     letter-spacing: 0.06em;
@@ -13,7 +13,35 @@
     color: #ffff;
     cursor: pointer;
     &:hover{
-        background-color: rgb(254, 193, 78);
+        background-color: white;
+        border: 2px solid pink;
+        color: black;
     }
     
+}
+
+.image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+.footer{
+    margin-top: 50px;
+    text-align: center;
+}
+
+.span{
+    
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.link{
+    text-decoration: none;
+    color: orange;
+     &:hover{
+       
+        color: pink;
+    }
 }
