--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,6 +1,5 @@
 .container{
     display: block;
-    
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 70px;
@@ -30,7 +29,7 @@
 .input{
     height: 40px;
     width: 100%;
-    padding: 11px 11px 11px 42px;
+    padding: 11px ;
     border: 1px solid rgba(33,33,33,0.2);
     border-radius: 4px;
     outline: none;
