--- a/src/components/RegisterForm/RegisterForm.module.scss
+++ b/src/components/RegisterForm/RegisterForm.module.scss
@@ -30,7 +30,7 @@
 .input{
     height: 40px;
     width: 100%;
-    padding: 11px 11px 11px 42px;
+    padding: 11px;
     border: 1px solid rgba(33,33,33,0.2);
     border-radius: 4px;
     outline: none;
